<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Sunshine</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_save">Save</string>
    <string name="title_activity_detail">Details</string>
    <string name="title_activity_settings">Settings</string>
    <string name="settings_title">Settings</string>
    <string name="location_view">View location</string>

    <!-- Strings for the location preference -->
    <string name="location_preference_title">Location</string>
    <string name="location_preference_key">location</string>
    <string name="location_preference_default_value">Barcelona</string>

    <!-- Strings for the temperature units preference -->
    <string name="temp_units_preference_title">Temperature Units</string>
    <string name="temp_units_preference_key">temp_units</string>
    <string name="temp_units_str_res">tempUnitsResName</string>
    <string name="temp_units_preference_default_value">Metric</string>
    <string name="temp_units_metric_value">Metric</string>
    <string name="temp_units_imperial_value">Imperial</string>

    <!-- Strings for the notification preference -->
    <string name="notification_preference_title">Notifications</string>
    <string name="notification_preference_key">notification</string>
    <string name="notification_preference_default_value">true</string>
    <string name="pref_enable_notifications_true">Enabled</string>
    <string name="pref_enable_notifications_false">Not Enabled</string>

        <!-- Date label when displaying today's weather forecast [CHAR LIMIT=20] -->
    <string name="today">Today</string>

    <!-- Date label when displaying tomorrow's weather forecast [CHAR LIMIT=20] -->
    <string name="tomorrow">Tomorrow</string>

    <!-- Date format for displaying day of week and date (i.e. Mon Jun 1) [CHAR LIMIT=20] -->
    <string name="format_full_friendly_date"><xliff:g id="day">%1$s</xliff:g>, <xliff:g id="date">%2$s</xliff:g></string>

    <string name="format_day_friendly_date"><xliff:g id="day">%1$s</xliff:g></string>
    <string name="format_date_friendly_date"><xliff:g id="date">%2$s</xliff:g></string>

    <string name="format_temperature"><xliff:g id="temp">%1.0f</xliff:g>\u00B0</string>

    <!-- Strings for formatting weather-related data -->

    <!-- Windspeed formats -->
    <!-- Wind in mph [CHAR LIMIT=25] -->
    <string name="format_wind_mph">
    <xliff:g id="speed">%1$1.0f</xliff:g> mph <xliff:g id="direction">%2$s</xliff:g>
</string>

    <!-- Wind in kph [CHAR LIMIT=25] -->
    <string name="format_wind_kmh">
   <xliff:g id="speed">%1$1.0f</xliff:g> km/h <xliff:g id="direction">%2$s</xliff:g>
</string>

    <!-- Pressure format CHAR LIMIT=25] -->
    <string name="format_pressure">Pressure: <xliff:g id="pressure">%1.0f</xliff:g> hPa</string>

    <!-- Humidity format CHAR LIMIT=25]-->
    <string name="format_humidity">Humidity: <xliff:g id="humidity">%1.0f</xliff:g> %%</string>


    <!-- Notification Format -->
    <string name="format_notification">
    Forecast: <xliff:g id="condition">%1$s</xliff:g> High: <xliff:g id="high">%2$s</xliff:g> Low: <xliff:g id="low">%3$s</xliff:g>
    </string>
    <!-- Strings related to Notification preference -->
    <string name="pref_last_notification">last_notification
    </string>

    <string-array name="sports_array">
        <item>Shuttle Badminton</item>
        <item>Tennis</item>
        <item>FootBall</item>
        <item>Basket Ball</item>
        <item>Table Tennis</item>
        <item>Chess</item>
        <item>Hockey</item>
    </string-array>


    <string name="sync_account_type">sunshine.example.com</string>
    <string name="content_authority">app.com.example.ricard.sunshine</string>

</resources>
