<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:title="@string/location_preference_title"
        android:key = "@string/location_preference_key"
        android:defaultValue="@string/location_preference_default_value"
        android:inputType="text"
        android:singleLine="true"
        />

    <ListPreference
        android:title="@string/temp_units_preference_title"
        android:key = "@string/temp_units_preference_key"
        android:defaultValue="@string/temp_units_preference_default_value"
        android:entries = "@array/temp_units_str_res"
        android:entryValues="@array/temp_units_str_res"
        />

    <CheckBoxPreference
        android:title="@string/notification_preference_title"
        android:key = "@string/notification_preference_key"
        android:summaryOff="@string/pref_enable_notifications_false"
        android:summaryOn="@string/pref_enable_notifications_true"
        android:defaultValue="@string/notification_preference_default_value"
        />
</PreferenceScreen>